--- a/sesion06Junit/pom.xml
+++ b/sesion06Junit/pom.xml
@@ -28,8 +28,119 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M4</version>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.5</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<!-- attached to Maven test phase -->
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<!-- Add this checking: coverage >= 90% -->
+					<execution>
+						<id>jacoco-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+					    	<rules>
+						 		<rule>
+							      <element>PACKAGE</element>
+							            <limits>
+							       <limit>
+							               <counter>LINE</counter>
+							              <value>COVEREDRATIO</value>
+							              <minimum>0.9</minimum>
+							       </limit>
+							      </limits>
+						     	</rule>
+					     	</rules>
+	           			</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven‐javadoc‐plugin</artifactId>
+		        <version>3.2.0</version>
+	      	</plugin>
+	      	<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven‐site‐plugin</artifactId>
+                <version>3.7.1</version>
+                <configuration>
+					<locales>es,en</locales>
+				</configuration>
+         	</plugin>
 		</plugins>
 	</build>
+	
+	<reporting>
+	    <plugins>
+	    	<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.9.0</version>
+			</plugin>
+	        <plugin>
+	          <groupId>org.apache.maven.plugins</groupId>
+	          <artifactId>maven‐checkstyle‐plugin</artifactId>
+	          <version>3.1.1</version>
+	          <reportSets>
+					<reportSet>
+						<reports>
+							<report>checkstyle</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+	        </plugin>
+	        <plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven‐jxr‐plugin</artifactId>
+	                <version>3.0.0</version>
+	        </plugin>
+	         <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven‐pmd‐plugin</artifactId>
+		        <version>3.13.0</version>
+		        <configuration>
+		          <linkXref>true</linkXref>
+		          <sourceEncoding>utf‐8</sourceEncoding>
+		          <minimumTokens>1</minimumTokens>
+		          <targetJdk>1.8</targetJdk>
+		          <skipEmptyReport>false</skipEmptyReport>
+					<rulesets>
+						<ruleset>/rulesets/java/braces.xml</ruleset>
+						<ruleset>/rulesets/java/naming.xml</ruleset>
+					</rulesets>
+		        </configuration>
+		      </plugin>
+		      <plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>findbugs‐maven‐plugin</artifactId>
+			    <version>3.0.4</version>				    
+			    <configuration>
+					<effort>Max</effort>
+				</configuration>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven‐project‐info‐reports‐plugin</artifactId>
+			    <version>3.0.0</version>
+			</plugin> 
+	    </plugins>
+  	</reporting>
+	
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
