--- a/sesion06Junit/pom.xml
+++ b/sesion06Junit/pom.xml
@@ -88,14 +88,21 @@
 	<reporting>
 	    <plugins>
 		    <plugin>
-		    <groupId>org.owasp</groupId>
-				<artifactId>dependency-check-maven</artifactId>
-				<version>5.3.2</version>
-				<configuration>
-					<skipTestScope>false</skipTestScope>
-					<formats>HTML,XML</formats> 
-				</configuration>
-			    </plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>5.3.2</version>
+                <configuration>
+                    <skipTestScope>false</skipTestScope>
+                    <formats>HTML,XML</formats>
+                </configuration>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>aggregate</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
 	    	<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
