--- a/sesion06Junit/pom.xml
+++ b/sesion06Junit/pom.xml
@@ -2,10 +2,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>sesion06Junit</groupId>
-	<artifactId>sesion06Junit</artifactId>
+	<groupId>Sesion06Junit</groupId>
+	<artifactId>Sesion06Junit</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -29,6 +28,11 @@
 				<version>3.0.0-M4</version>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.2.0</version>
+			</plugin>
+			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.5</version>
@@ -40,12 +44,13 @@
 					</execution>
 					<!-- attached to Maven test phase -->
 					<execution>
-						<id>report</id>
+						<id>jacoco-report</id>
 						<phase>test</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
 					</execution>
+
 					<!-- Add this checking: coverage >= 90% -->
 					<execution>
 						<id>jacoco-check</id>
@@ -53,110 +58,147 @@
 							<goal>check</goal>
 						</goals>
 						<configuration>
-					    	<rules>
-						 		<rule>
-							      <element>PACKAGE</element>
-							            <limits>
-							       <limit>
-							               <counter>LINE</counter>
-							              <value>COVEREDRATIO</value>
-							              <minimum>0.9</minimum>
-							       </limit>
-							      </limits>
-						     	</rule>
-					     	</rules>
-	           			</configuration>
+							<rules>
+								<rule>
+									<element>PACKAGE</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.9</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
 			<plugin>
-		        <groupId>org.apache.maven.plugins</groupId>
-		        <artifactId>maven‐javadoc‐plugin</artifactId>
-		        <version>3.2.0</version>
-	      	</plugin>
-	      	<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven‐site‐plugin</artifactId>
-                <version>3.7.1</version>
-                <configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<source>8</source>
+				</configuration>			
+			</plugin>
+
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.7.1</version>
+				<configuration>
 					<locales>es,en</locales>
 				</configuration>
-         	</plugin>
+			</plugin>
+
 		</plugins>
 	</build>
-	
+
 	<reporting>
-	    <plugins>
-		    <plugin>
-                <groupId>org.owasp</groupId>
-                <artifactId>dependency-check-maven</artifactId>
-                <version>5.3.2</version>
-                <configuration>
-                    <skipTestScope>false</skipTestScope>
-                    <formats>HTML,XML</formats>
-                </configuration>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>aggregate</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-	    	<plugin>
+		<plugins>
+
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.9.0</version>
 			</plugin>
-	        <plugin>
-	          <groupId>org.apache.maven.plugins</groupId>
-	          <artifactId>maven‐checkstyle‐plugin</artifactId>
-	          <version>3.1.1</version>
-	          <reportSets>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.1.1</version>
+				<reportSets>
 					<reportSet>
 						<reports>
 							<report>checkstyle</report>
 						</reports>
 					</reportSet>
 				</reportSets>
-	        </plugin>
-	        <plugin>
-	                <groupId>org.apache.maven.plugins</groupId>
-	                <artifactId>maven‐jxr‐plugin</artifactId>
-	                <version>3.0.0</version>
-	        </plugin>
-	         <plugin>
-		        <groupId>org.apache.maven.plugins</groupId>
-		        <artifactId>maven‐pmd‐plugin</artifactId>
-		        <version>3.13.0</version>
-		        <configuration>
-		          <linkXref>true</linkXref>
-		          <sourceEncoding>utf‐8</sourceEncoding>
-		          <minimumTokens>1</minimumTokens>
-		          <targetJdk>1.8</targetJdk>
-		          <skipEmptyReport>false</skipEmptyReport>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>3.0.0</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.13.0</version>
+				<configuration>
+					<linkXref>true</linkXref>
+					<sourceEncoding>utf-8</sourceEncoding>
+					<minimumTokens>1</minimumTokens>
+					<targetJdk>1.8</targetJdk>
+					<skipEmptyReport>false</skipEmptyReport>
 					<rulesets>
 						<ruleset>/rulesets/java/braces.xml</ruleset>
 						<ruleset>/rulesets/java/naming.xml</ruleset>
 					</rulesets>
-		        </configuration>
-		      </plugin>
-		      <plugin>
-			    <groupId>org.codehaus.mojo</groupId>
-			    <artifactId>findbugs‐maven‐plugin</artifactId>
-			    <version>3.0.4</version>				    
-			    <configuration>
+
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>3.0.4</version>
+				<configuration>
 					<effort>Max</effort>
 				</configuration>
 			</plugin>
+
 			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven‐project‐info‐reports‐plugin</artifactId>
-			    <version>3.0.0</version>
-			</plugin> 
-	    </plugins>
-  	</reporting>
-	
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>3.0.0</version>
+			</plugin>
+
+ 			<plugin>
+				<groupId>org.owasp</groupId>
+				<artifactId>dependency-check-maven</artifactId>
+				<version>5.3.2</version>
+				<configuration>
+					<skipTestScope>false</skipTestScope>
+					<formats>
+						<format>HTML</format>
+						<format>XML</format>
+					</formats>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>aggregate</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+
+
+			<plugin>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
+				<version>4.0.0</version>
+				<configuration>
+					<effort>Max</effort>
+					<threshold>Low</threshold>
+					<failOnError>true</failOnError>
+					<includeFilterFile>${session.executionRootDirectory}/spotbugs-security-include.xml</includeFilterFile>
+					<excludeFilterFile>${session.executionRootDirectory}/spotbugs-security-exclude.xml</excludeFilterFile>
+					<plugins>
+						<plugin>
+							<groupId>com.h3xstream.findsecbugs</groupId>
+							<artifactId>findsecbugs-plugin</artifactId>
+							<version>1.10.1</version>
+						</plugin>
+					</plugins>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</reporting>
+
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
@@ -178,6 +220,12 @@
 			<artifactId>junit-jupiter-params</artifactId>
 			<version>5.4.1</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.spotbugs</groupId>
+			<artifactId>spotbugs</artifactId>
+			<version>4.0.1</version>
 		</dependency>
 	</dependencies>
 </project>
